# volt-ecs

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/reflect/: type_id.hpp  type_name.hpp
include/volt/reflect/: type_id.hpp  type_name.hpp
src/volt/containers/: span.hpp  stl.hpp
src/volt/meta/: concepts.hpp
src/volt/reflect/: property.cc  property.hpp  reflect.hpp  type_id.hpp  type_meta.cc  type_meta.hpp  type_meta_builder.hpp  type_name.hpp  variant.cc  variant.hpp
tests/: CMakeLists.txt  test_reflection.cc
volt/reflect/: type_name.hpp
